--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: Cops
-Version: 4.2-5
-Date: 2020-05-27
+Version: 4.2-6
+Date: 2020-07-08
 Title: C-OPS Processing
 Author: Bernard Gentili <bernard.gentili@orange.fr>
 Maintainer: Simon Belanger <simon_belanger@uqar.ca>
-Depends: R (>= 2.0), tcltk, e1071, stringr, ncdf4
+Depends: R (>= 2.0), tcltk, e1071, stringr, ncdf4, rmarkdown, dplyr, tidyr, ggplot2, plotly, stargazer
 Description: COPS Processing
 License: GPL version 2 or newer
 URL: http://www.obs-vlfr.fr
