--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: Cops
-Version: 4.2-12
+Version: 4.2.12
 Date: 2020-08-20
 Title: C-OPS Processing
 Author: Bernard Gentili <bernard.gentili@orange.fr>
